# AgentVox-Project

./: .gitignore  AgentVox_프로젝트_요약.md  Git_Push_완료_가이드.md  claude_vscode_setup.md  download_model.py  get_youtube_transcript.py  git_setup.bat  github_push_guide.md  process_conan_video.py  push_to_github.bat  run_agentvox.py  safe_push.bat  simple_agentvox.py  simple_voice_test.py  start_agentvox.py  test_agentvox.py  test_push.bat  text_agentvox.py  video_to_text.py
AgentVox-Pro-main/: .gitignore  LICENSE  README.md  SPEAKER_RECORDING.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt  setup.py  speaker_ko.json
AgentVox-Pro-main/agentvox/: __init__.py  cli.py  record_speaker_wav.py  voice_assistant.py
