[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvox"
version = "0.2.0"
description = "Edge-based voice assistant using Gemma LLM with STT and TTS capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MIMIC Lab"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.6.0",
    "numpy",
    "realtimestt",
    "realtimetts[coqui]",
    "llama-cpp-python",
    "pygame",
    "sounddevice",
    "soundfile",
    "gradio",
    "flask",
    "pyaudio",
    "hangul-romanize",
    "mecab-python3",
    "unidic-lite"
]

[project.urls]
Homepage = "https://github.com/yourusername/agentvox"

[project.scripts]
agentvox = "agentvox.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentvox*"]

[tool.setuptools.package-data]
agentvox = ["*.gguf"]